<resources>
    <string name="app_name">Popular Movies</string>
    <string name="app_sorting_popularity">Popular Movies</string>
    <string name="app_sorting_rate">Top Rated Movies</string>
    <string name="app_sorting_favorite">Favorite Movies</string>
    <string name="action_sort_by_rate">Top Rated</string>
    <string name="action_sort_by_popularity">Most Popular</string>
    <string name="action_sort_by_favorite">Favorites</string>
    <string name="sorting_shared_preference">sortingPref</string>
    <string name="pref_sorting_key">SortingKey</string>
    <string name="sort_by_popularity">popular</string>
    <string name="sort_by_rated">top_rated</string>
    <string name="sort_by_favorite">favorite</string>
    <string name="detail_view_name">Movie Detail</string>
    <string name="user_rating">Rating: </string>
    <string name="release_date">Release date: </string>
    <string name="no_internet_connection">No Internet. Connecting&#8230;</string>
    <string name="poster_size">w185</string>
    <string name="bundle_key_sorting">SortingState</string>
    <string name="bundle_key_position">VisiblePosition</string>
    <string name="toast_msg_sort_by_rated">Sort by top-rated</string>
    <string name="toast_msg_sort_by_popularity">Sort by most popular</string>
    <string name="toast_msg_sort_by_favorite">Filter by favorite</string>
    <string name="toast_msg_no_result">No movie posters</string>
    <string name="toast_msg_no_favorite">No favorite movie lists</string>
    <string name="image_base_url">http://image.tmdb.org/t/p/</string>
    <string name="fake_poster_title">Poster Title</string>
    <string name="fake_overview">movie overview</string>
    <string name="fake_rate">10.0</string>
    <string name="fake_date">2017&#8221;05&#8221;19</string>
    <string name="fake_trailer_title">Trailers</string>
    <string name="fake_review_title">Reviews</string>
    <string name="fake_trailer_name">Trailer Name</string>
    <string name="fake_review_author">Author</string>
    <string name="fake_review_content">Review Content</string>
    <string name="fake_review_url">Review URL</string>
    <string name="youtube">YouTube</string>
    <string name="trailer_title">Trailers</string>
    <string name="review_title">Reviews</string>
    <string name="youtube_base_url">https://www.youtube.com/watch</string>
    <string name="trailer_param_key">v</string>
    <string name="trailer_no_internet">Trailers\n\n\tNo Internet connection.</string>
    <string name="review_no_internet">Reviews\n\n\tNo Internet connection.</string>
    <string name="trailer_no_content">Trailers\n\n\tNo trailer for this movie.</string>
    <string name="review_no_content">Reviews\n\n\tNo review for this movie.</string>
    <string name="add_to_favorite_button">Add To\nFavorite</string>
    <string name="remove_from_favorite_button">Remove From\nFavorite</string>
    <string name="loader_bundle_key_sort_method">SortByMethod</string>
    <string name="loader_bundle_key_movie_id">MovieID</string>
    <string name="loader_bundle_key_movie_detail">MovieDetail</string>
    <string name="intent_key_is_favorite">IsFavoriteMovie</string>
    <string name="is_true">TRUE</string>
    <string name="is_false">FALSE</string>
    <string name="image_description">movie_poster</string>
    <string name="trailer_image_description">trailer_play_icon</string>

</resources>
