<?xml version="1.0" encoding="utf-8"?>
<!--The following code is referencing:-->
<!-- feelZdroid (Aug, 2015) url: http://www.feelzdroid.com/2015/08/collapsing-toolbars-android-example.html-->
<!-- Antonio Leiva (Jul, 2015) url: http://antonioleiva.com/collapsing-toolbar-layout/-->
<!--HUYEN TUE DAO (Jun, 2015) url: http://www.randomlytyping.com/blog/2015/6/17/things-you-may-not-know-about-tools-attributes-->

<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detail_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/detail_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapse_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            android:background="?colorPrimary"
            android:fitsSystemWindows="true"
            app:expandedTitleMarginStart="@dimen/detail_expanded_title_margin_start"
            app:expandedTitleMarginEnd="@dimen/detail_expanded_title_margin_end">

            <ImageView
                android:id="@+id/detail_image"
                android:layout_width="match_parent"
                android:layout_height="@dimen/detail_image_height"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:fitsSystemWindows="true"
                android:contentDescription="@string/image_description"
                app:layout_collapseMode="parallax"/>

            <android.support.v7.widget.Toolbar
                android:id="@+id/detail_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin" />
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/detail_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="fill_vertical"
        android:paddingBottom="@dimen/detail_nestedscrollview_padding_bototm"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:fillViewport="true"
        android:background="@color/black">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/detail_card_padding"
            android:background="@color/black">

            <android.support.v7.widget.CardView
                android:layout_marginLeft="@dimen/detail_card_margin"
                android:layout_marginRight="@dimen/detail_card_margin"
                android:layout_marginTop="@dimen/detail_card_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/black">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/black">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/black" >
                        <Button
                            android:id="@+id/favourite_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_alignParentEnd="true"
                            android:text="@string/add_to_favorite_button"
                            style="@style/TextAppearance.AppCompat.Subhead" />
                    </RelativeLayout>
                    <TextView
                        android:id="@+id/detail_overview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:padding="@dimen/detail_text_padding"
                        android:textColor="@color/white"
                        android:textSize="@dimen/detail_text_size"
                        tools:text="@string/fake_overview" />
                    <TextView
                        android:id="@+id/detail_rate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:padding="@dimen/detail_text_padding"
                        android:textSize="@dimen/detail_text_size"
                        tools:text="@string/fake_rate"/>
                    <TextView
                        android:id="@+id/detail_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:padding="@dimen/detail_text_padding"
                        android:textSize="@dimen/detail_text_size"
                        tools:text="@string/fake_date"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/card_margin"
                android:layout_marginBottom="@dimen/card_margin"
                android:layout_marginLeft="@dimen/card_margin"
                android:layout_marginRight="@dimen/card_margin"
                android:padding="@dimen/card_padding"
                app:cardCornerRadius="@dimen/card_corner_radius" >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >
                    <TextView
                        android:id="@+id/trailer_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                        tools:text="@string/fake_trailer_title"/>
                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/trailer_view"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/recyclerview_trailer_fix_height"
                        android:paddingTop="@dimen/recyclerview_padding_top"
                        android:paddingStart="@dimen/recyclerview_padding_left"
                        android:paddingLeft="@dimen/recyclerview_padding_left"
                        android:paddingRight="@dimen/recyclerview_padding_right"
                        android:paddingEnd="@dimen/recyclerview_padding_right">
                    </android.support.v7.widget.RecyclerView>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/card_margin"
                android:layout_marginBottom="@dimen/card_margin"
                android:layout_marginLeft="@dimen/card_margin"
                android:layout_marginRight="@dimen/card_margin"
                android:padding="@dimen/card_padding"
                app:cardCornerRadius="@dimen/card_corner_radius" >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >
                    <TextView
                        android:id="@+id/review_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                        tools:text="@string/fake_review_title"/>
                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/review_view"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/recyclerview_review_fix_height"
                        android:paddingTop="@dimen/recyclerview_padding_top"
                        android:paddingStart="@dimen/recyclerview_padding_left"
                        android:paddingLeft="@dimen/recyclerview_padding_left"
                        android:paddingRight="@dimen/recyclerview_padding_right"
                        android:paddingEnd="@dimen/recyclerview_padding_right">
                    </android.support.v7.widget.RecyclerView>
                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>